--- a/app/src/main/res/menu/album_activity_actions.xml
+++ b/app/src/main/res/menu/album_activity_actions.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Camera, should appear as action button -->
     <item
-        android:id="@+id/action_search"
+        android:id="@+id/action_camera"
         android:icon="@android:drawable/ic_menu_camera"
         android:title="Camera"
         android:showAsAction="ifRoom"/>
